--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,16 @@
+SECRET_KEY="my_super_secret_key"
+
 DATABASE_DRIVER="mysql" || DATABASE_DRIVER="pgsql"
 DATABASE_PASSWORD=""
 DATABASE_PORT=""
 DATABASE_URL=""
 DATABASE_USER=""
 DATABASE_NAME=""
+
+MAIL_SERVER=""
+MAIL_PORT=""
+MAIL_USE_TLS=False
+MAIL_USE_SSL=False
+MAIL_USERNAME=""
+MAIL_PASSWORD=""
+MAIL_FROM=""
