--- a/src/.env_example
+++ b/src/.env_example
@@ -7,6 +7,14 @@ DATABASE_URL=""
 DATABASE_USER=""
 DATABASE_NAME=""
 
+# When using docker db
+# DATABASE_NAME="app_v1"
+# DATABASE_PORT="3306"
+# DATABASE_PASSWORD="password@12345"
+# DATABASE_USERNAME="root"
+# DATABASE_HOST="mysql_server"
+# DATABASE_DIALECT="mysql"
+
 MAIL_SERVER=""
 MAIL_PORT=""
 MAIL_USE_TLS=False
